Frontend.yaml
# front-end-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80

        livenessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 5

        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config

        


---
# front-end-service
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
